RESOLVED FIXED124233
[sh4] ASSERTION FAILED in fast/regex/pcre-test-1 test
https://bugs.webkit.org/show_bug.cgi?id=124233
Summary [sh4] ASSERTION FAILED in fast/regex/pcre-test-1 test
Julien Brianceau
Reported 2013-11-12 14:24:26 PST
ASSERTION FAILED occurs in fast/regex/pcre-test-1 test for sh4 architecture [...] PASS regex131.exec(input0); is results PASS regex131.exec(input1); is results PASS regex132.exec(input0); is results PASS regex132.exec(input1); is results ASSERTION FAILED: (m_claimscratchReg != 0x3) /home/ubuntu/work/sh4/webkit-dbg/Source/JavaScriptCore/assembler/SH4Assembler.h(386) : JSC::SH4Assembler::RegisterID JSC::SH4Assembler::claimScratch()
Attachments
Fix load32WithUnalignedHalfWords function in sh4 baseline JIT. (1.67 KB, patch)
2013-11-12 14:32 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-11-12 14:32:07 PST
Created attachment 216726 [details] Fix load32WithUnalignedHalfWords function in sh4 baseline JIT.
WebKit Commit Bot
Comment 2 2013-11-12 15:07:32 PST
Comment on attachment 216726 [details] Fix load32WithUnalignedHalfWords function in sh4 baseline JIT. Clearing flags on attachment: 216726 Committed r159153: <http://trac.webkit.org/changeset/159153>
WebKit Commit Bot
Comment 3 2013-11-12 15:07:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.