[sh4] Fix load32WithUnalignedHalfWords function in baseline JIT. https://bugs.webkit.org/show_bug.cgi?id=124233

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-11-12
Reviewed by Michael Saboff.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::load32WithUnalignedHalfWords): Do not claim scratch register too early.
Test already covered by fast/regex/pcre-test-1.

Canonical link: https://commits.webkit.org/142438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159153 268f45cc-cd09-0410-ab3c-d52691b4dbfc